--- a/AboutUs/NaharMalik.html
+++ b/AboutUs/NaharMalik.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>N.m.<-About Us<-Bike Eazy</title>
-    <link rel="icon" type="image/png" href="symbol.png">
+    <title>N.M.<-About Us<-Bike Eazy</title>
+    <link rel="icon" type="image/png" href="../img/symbol.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet" />
     <style>
@@ -83,8 +83,8 @@
     <div class="container-fluid flex-column align-items-start">
         <div class="d-flex w-100 justify-content-between align-items-center mb-2 flex-wrap">
             <a class="navbar-brand d-flex align-items-center" href="index.html">
-                <img src="img/logo.png" alt="Bike Eazy Logo" width="50" class="me-2" />
-                <span class="fw-bold fs-4"><i>Our Team:</i> Nahar Malik</span>
+                <img src="../img/logo.png" alt="Bike Eazy Logo" width="50" class="me-2" />
+                <span class="fw-bold fs-4"><i>Team Member:</i> Nahar Malik</span>
             </a>
             <div class="d-flex flex-wrap align-items-center gap-3">
                 <span class="infoBox">145 Rideau Street, Ottawa, ON</span>
@@ -113,7 +113,7 @@
                     <ul class="dropdown-menu" aria-labelledby="aboutDropdown">
                         <li><a class="dropdown-item" href="../about">Mission</a></li>
                         <li><a class="dropdown-item" href="./PierreGeorges">Our Founder & Our Lead Mechanic</a></li>
-                        <li><a class="dropdown-item" href="./LindaTorres">Our Community & Our Education Manager</a></li>
+                        <li><a class="dropdown-item" href="./LindaTorres">Community & Education Manager</a></li>
                         <li><a class="dropdown-item" href="./TariqBenson">Our Sustainability & Our Partnerships Lead</a></li>
                     </ul>
                 </li>
@@ -126,6 +126,46 @@
         </div>
     </div>
 </nav>
+<!-- Main Content -->
+<div class="container my-5">
+    <div class="row g-4">
+        <!-- Map Section -->
+        <div class="col-lg-6">
+            <div class="card-section h-100">
+                <h4>Portfolio Images</h4>
+                <div class="ratio ratio-1x1 rounded">
+                    <img src="../img/Nahar%20Malik.jpg">
+                </div>
+            </div>
+        </div>
 
+        <!-- Info Section -->
+        <div class="col-lg-6">
+            <div class="card-section h-100">
+                <h3>Nahar Malik</h3>
+
+                <h4>My Position</h4>
+                <p>Customer Experience Specialist</p>
+
+                <h4>My Contact Information</h4>
+                <p><strong>Phone:</strong> (613) 555-7639</p>
+                <p><strong>Email:</strong> nahar@bikeeazy.com</p>
+                <p><strong>Instagram:</strong> @nahar.bikeeazy</p>
+
+                <h4 class="mt-4">Teammates Opinion</h4>
+                <p>A full-time university student and daily cyclist, Nahar understands the needs of commuters firsthand. He manages front-of-house services, online bookings, and helps customers find the best parts and solutions for their biking needs.</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Footer -->
+<footer class="text-center py-4">
+    <p>Designed by Pierre Georges • © 2025 QuickCycle Repairs</p>
+    <a href="https://pierre252004.github.io/Portfolio/">Pierre's portfolio</a>
+</footer>
+
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
