--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact Us<-Bike Eazy</title>
-    <link rel="icon" type="image/png" href="symbol.png">
+    <link rel="icon" type="image/png" href="./img/symbol.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet" />
     <style>
@@ -74,58 +74,128 @@
             font-size: 0.9rem;
             color: #666;
         }
+        .site {
+            display: none;
+            background: #fff;
+            padding: 40px;
+            border-radius: 10px;
+            box-shadow: 0 0 15px rgba(0,0,0,0.1);
+        }
+        .site.active {
+            display: block;
+        }
+        .switch-btn {
+            margin-bottom: 20px;
+        }
     </style>
 </head>
 <body>
+<!--- Main Site --->
+<div id="siteM" class="site active">
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light sticky-top">
+        <div class="container-fluid flex-column align-items-start">
+            <div class="d-flex w-100 justify-content-between align-items-center mb-2 flex-wrap">
+                <a class="navbar-brand d-flex align-items-center" href="index.html">
+                    <img src="img/logo.png" alt="Bike Eazy Logo" width="50" class="me-2" />
+                    <span class="fw-bold fs-4">Contact Us</span>
+                </a>
+                <div class="d-flex flex-wrap align-items-center gap-3">
+                    <span class="infoBox">145 Rideau Street, Ottawa, ON</span>
+                    <span class="infoBox">(613) 555-9283</span>
+                </div>
+            </div>
 
-<!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-light sticky-top">
-    <div class="container-fluid flex-column align-items-start">
-        <div class="d-flex w-100 justify-content-between align-items-center mb-2 flex-wrap">
-            <a class="navbar-brand d-flex align-items-center" href="index.html">
-                <img src="img/logo.png" alt="Bike Eazy Logo" width="50" class="me-2" />
-                <span class="fw-bold fs-4">Contact Us</span>
-            </a>
-            <div class="d-flex flex-wrap align-items-center gap-3">
-                <span class="infoBox">145 Rideau Street, Ottawa, ON</span>
-                <span class="infoBox">(613) 555-9283</span>
+            <button class="navbar-toggler mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#navToggle">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse w-100" id="navToggle">
+                <ul class="navbar-nav d-flex align-items-start gap-3">
+                    <li class="nav-item"><a class="nav-link" href="./">Home</a></li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" id="servicesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Services</a>
+                        <ul class="dropdown-menu" aria-labelledby="servicesDropdown">
+                            <li><a class="dropdown-item" href="./services">Our Goal</a></li>
+                            <li><a class="dropdown-item" href="./Services/buildYours">Build Your Bike</a></li>
+                            <li><a class="dropdown-item" href="./Services/mAndR">Maintenance & Repair</a></li>
+                            <li><a class="dropdown-item" href="./Services/repairYourself">Repair By Yourself</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" id="aboutDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">About Us</a>
+                        <ul class="dropdown-menu" aria-labelledby="aboutDropdown">
+                            <li><a class="dropdown-item" href="./about">Mission</a></li>
+                            <li><a class="dropdown-item" href="./AboutUs/PierreGeorges">Our Founder & Our Lead Mechanic</a></li>
+                            <li><a class="dropdown-item" href="./AboutUs/LindaTorres">Our Community & Our Education Manager</a></li>
+                            <li><a class="dropdown-item" href="./AboutUs/NaharMalik">Our Customer Experience Specialistc</a></li>
+                            <li><a class="dropdown-item" href="./AboutUs/TariqBenson">Our Sustainability & Our Partnerships Lead</a></li>
+                        </ul>
+                    </li>
+                </ul>
+                <div class="ms-auto">
+                    <a class="btn buttonBox" href="./location">Hour of Operation</a>
+                    <a class="btn buttonBox" href="./book">Book</a>
+                </div>
             </div>
         </div>
+    </nav>
+    <!-- Main Content -->
+    <div class="container my-5">
+        <div class="row g-4">
+            <!-- Map Section -->
+            <div class="col-lg-6">
+                <div class="card-section h-100">
+                    <h4>Find Us on the Map</h4>
+                    <div class="ratio ratio-4x3 rounded">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2795.931710567225!2d-75.68925238444316!3d45.42753134491215!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0503f7bd93d9%3A0xb3d18b0c2eb804ed!2s145%20Rideau%20St%2C%20Ottawa%2C%20ON%20K1N%205X4!5e0!3m2!1sen!2sca!4v1629927275842!5m2!1sen!2sca"
+                            style="border:0;" allowfullscreen="" loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade">
+                        </iframe>
+                    </div>
+                </div>
+            </div>
 
-        <button class="navbar-toggler mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#navToggle">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+            <!-- Info Section -->
+            <div class="col-lg-6">
+                <div class="card-section h-100">
+                    <h4>Location</h4>
+                    <p>145 Rideau Street, Suite 210<br>Ottawa, ON K1N 5X4<br>Canada</p>
 
-        <div class="collapse navbar-collapse w-100" id="navToggle">
-            <ul class="navbar-nav d-flex align-items-start gap-3">
-                <li class="nav-item"><a class="nav-link" href="./">Home</a></li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" id="servicesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Services</a>
-                    <ul class="dropdown-menu" aria-labelledby="servicesDropdown">
-                        <li><a class="dropdown-item" href="./services">Our Goal</a></li>
-                        <li><a class="dropdown-item" href="./Services/buildYours">Build Your Bike</a></li>
-                        <li><a class="dropdown-item" href="./Services/mAndR">Maintenance & Repair</a></li>
-                        <li><a class="dropdown-item" href="./Services/repairYourself">Repair By Yourself</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" id="aboutDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">About Us</a>
-                    <ul class="dropdown-menu" aria-labelledby="aboutDropdown">
-                        <li><a class="dropdown-item" href="./about">Mission</a></li>
-                        <li><a class="dropdown-item" href="./AboutUs/PierreGeorges">Our Founder & Our Lead Mechanic</a></li>
-                        <li><a class="dropdown-item" href="./AboutUs/LindaTorres">Our Community & Our Education Manager</a></li>
-                        <li><a class="dropdown-item" href="./AboutUs/NaharMalik">Our Customer Experience Specialistc</a></li>
-                        <li><a class="dropdown-item" href="./AboutUs/TariqBenson">Our Sustainability & Our Partnerships Lead</a></li>
-                    </ul>
-                </li>
-            </ul>
-            <div class="ms-auto">
-                <a class="btn buttonBox" href="./location">Hour of Operation</a>
-                <a class="btn buttonBox" href="./book">Book</a>
+                    <h4>Contact</h4>
+                    <p><strong>Phone:</strong> (613) 555-9283</p>
+                    <p><strong>Email:</strong> info@bikeeazy.ca</p>
+                    <p><strong>Instagram:</strong> @bikeeazy.ottawa</p>
+                    <form id="subForm">
+                        <label for="name">Name:</label>
+                        <input type="text" id="name" required><br><br>
+
+                        <label for="email">Email:</label>
+                        <input type="email" id="email" required><br><br>
+
+                        <label for="phone">Phone:</label>
+                        <input type="phone" id="phone" required><br><br>
+
+                        <label for="message">Comment:</label><br>
+                        <textarea id="message" rows="5" required></textarea><br><br>
+
+                        <input type="submit" value="Subscribe For Future">
+                    </form>
+                </div>
             </div>
         </div>
     </div>
-</nav>
+
+    <!-- Footer -->
+    <footer class="text-center py-4">
+        <p>Designed by Pierre Georges • © 2025 QuickCycle Repairs</p>
+        <a href="https://pierre252004.github.io/Portfolio/">Pierre's portfolio</a>
+    </footer>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</div>
 
 </body>
 </html>
