--- a/services.html
+++ b/services.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Services<-Bike Eazy</title>
-    <link rel="icon" type="image/png" href="symbol.png">
+    <title>Services – Bike Eazy</title>
+    <link rel="icon" type="image/png" href="./img/symbol.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet" />
     <style>
@@ -100,7 +100,7 @@
             <ul class="navbar-nav d-flex align-items-start gap-3">
                 <li class="nav-item"><a class="nav-link" href="./">Home</a></li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" id="servicesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Services</a>
+                    <a class="nav-link dropdown-toggle" href="#" id="servicesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Services</a>
                     <ul class="dropdown-menu" aria-labelledby="servicesDropdown">
                         <li><a class="dropdown-item" href="./Services/buildYours">Build Your Bike</a></li>
                         <li><a class="dropdown-item" href="./Services/mAndR">Maintenance & Repair</a></li>
@@ -108,30 +108,32 @@
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" id="aboutDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">About Us</a>
+                    <a class="nav-link dropdown-toggle" href="#" id="aboutDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">About Us</a>
                     <ul class="dropdown-menu" aria-labelledby="aboutDropdown">
                         <li><a class="dropdown-item" href="./about">Mission</a></li>
-                        <li><a class="dropdown-item" href="./AboutUs/PierreGeorges">Our Founder & Our Lead Mechanic</a></li>
-                        <li><a class="dropdown-item" href="./AboutUs/LindaTorres">Our Community & Our Education Manager</a></li>
-                        <li><a class="dropdown-item" href="./AboutUs/NaharMalik">Our Customer Experience Specialistc</a></li>
-                        <li><a class="dropdown-item" href="./AboutUs/TariqBenson">Our Sustainability & Our Partnerships Lead</a></li>
+                        <li><a class="dropdown-item" href="./AboutUs/PierreGeorges">Our Founder & Lead Mechanic</a></li>
+                        <li><a class="dropdown-item" href="./AboutUs/LindaTorres">Community & Education Manager</a></li>
+                        <li><a class="dropdown-item" href="./AboutUs/NaharMalik">Customer Experience Specialist</a></li>
+                        <li><a class="dropdown-item" href="./AboutUs/TariqBenson">Sustainability & Partnerships Lead</a></li>
                     </ul>
                 </li>
                 <li class="nav-item"><a class="nav-link" href="./contact">Contact Us</a></li>
             </ul>
-            <div class="ms-auto">
+            <div class="ms-auto d-flex gap-2">
                 <a class="btn buttonBox" href="./location">Hour of Operation</a>
                 <a class="btn buttonBox" href="./book">Book</a>
             </div>
         </div>
     </div>
 </nav>
+
 <!-- Goal -->
 <section id="mission" class="container my-5">
     <h3 class="text-center mb-4">Our Goal</h3>
     <p class="lead text-center">
-        At <strong>Bike Eazy</strong> is to make biking effortless, accessible, and empowering for every rider.
-        We aim to provide a reliable space where people can custom-build, repair, and maintain their bikes with confidence, whether they’re commuting daily, riding with family, or just starting out.
+        At <strong>Bike Eazy</strong>, our goal is to make biking effortless, accessible, and empowering for every rider.
+        We provide a reliable space where people can custom-build, repair, and maintain their bikes with confidence,
+        whether they’re commuting daily, riding with family, or just starting out.
         Through hands-on support, education, and sustainable practices, we help riders stay mobile, independent, and environmentally conscious.
     </p>
 </section>
@@ -140,32 +142,32 @@
 <section id="team" class="container my-5">
     <h3 class="text-center mb-4">Our Services</h3>
     <div class="row g-4">
-        <div class="col-md-6 col-lg-3">
+        <div class="col-md-6 col-lg-4">
             <div class="card text-center">
-                <img src="img/bicycle-workshop-concept-illustration/7484872.jpg" class="card-img-top rounded-circle mx-auto mt-3" style="width: 120px; height: 120px; object-fit: cover;" alt="buildYours">
+                <img src="img/bicycle-workshop-concept-illustration/7484872.jpg" class="card-img-top rounded-circle mx-auto mt-3" style="width: 120px; height: 120px; object-fit: cover;" alt="Build Your Bike">
                 <div class="card-body">
                     <h5 class="card-title">Build Your Own Bike</h5>
-                    <p class="card-text"><i>Price:</i> 40$</p>
+                    <p class="card-text"><i>Price:</i> $40</p>
                     <a href="./Services/buildYours" class="btn btn-tech w-100">More Information</a>
                 </div>
             </div>
         </div>
-        <div class="col-md-6 col-lg-3">
+        <div class="col-md-6 col-lg-4">
             <div class="card text-center">
-                <img src="img/bicycle-maintenance-workshop-isometric-background-with-two-workers-installing-bike-parts-after-repai/2105.i105.011.S.m005.c13.isometric%20bicycle%20repair%20illustration.jpg" class="card-img-top rounded-circle mx-auto mt-3" style="width: 120px; height: 120px; object-fit: cover;" alt="mAndR">
+                <img src="img/bicycle-maintenance-workshop-isometric-background-with-two-workers-installing-bike-parts-after-repai/2105.i105.011.S.m005.c13.isometric%20bicycle%20repair%20illustration.jpg" class="card-img-top rounded-circle mx-auto mt-3" style="width: 120px; height: 120px; object-fit: cover;" alt="Maintenance & Repair">
                 <div class="card-body">
                     <h5 class="card-title">Maintenance & Repair</h5>
-                    <p class="card-text"><i>Price:</i> 22$</p>
+                    <p class="card-text"><i>Price:</i> $22</p>
                     <a href="./Services/mAndR" class="btn btn-tech w-100">More Information</a>
                 </div>
             </div>
         </div>
-        <div class="col-md-6 col-lg-3">
+        <div class="col-md-6 col-lg-4">
             <div class="card text-center">
-                <img src="img/bicycle-workshop-concept-illustration%20(1)/7128397.jpg" class="card-img-top rounded-circle mx-auto mt-3" style="width: 120px; height: 120px; object-fit: cover;" alt="repairYourself">
+                <img src="img/bicycle-workshop-concept-illustration%20(1)/7128397.jpg" class="card-img-top rounded-circle mx-auto mt-3" style="width: 120px; height: 120px; object-fit: cover;" alt="Repair By Yourself">
                 <div class="card-body">
                     <h5 class="card-title">Repair By Yourself</h5>
-                    <p class="card-text"><i>Price:</i> 10$</p>
+                    <p class="card-text"><i>Price:</i> $10</p>
                     <a href="./Services/repairYourself" class="btn btn-tech w-100">More Information</a>
                 </div>
             </div>
